fix: set dealer z-index to 10000 and moving item z-index to 11000

--- a/web/static/poker.css
+++ b/web/static/poker.css
@@ -257,7 +257,7 @@ nav a:hover {
     height: 90px;
 
     user-select: none;
-    z-index: 1000000;
+    z-index: 10000;
     touch-action: none;
 }
 
